# byo-sql

./: Cargo.toml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/a-simple-grammar/: root.md
book/src/getting-started/: pest.md
sql-rs/: Cargo.toml  README.md
sql-rs/src/: lib.rs  main.rs  query.pest
sql-rs/src/data/: column.rs  database.rs  datatype.rs  mod.rs  row.rs  table.rs  value.rs  value_list.rs
sql-rs/src/execute/: create_table.rs  create_table_query_result.rs  evaluate.rs  insert.rs  insert_query_result.rs  mod.rs  query_result.rs  select.rs  select_query_result.rs  update.rs
sql-rs/src/parse/: mod.rs  parser.rs  query.pest
sql-rs/src/parse/ast/: assignment.rs  column.rs  column_identifier.rs  create_table_column.rs  create_table_query.rs  datatype.rs  expression.rs  identifier.rs  insert_query.rs  join.rs  list.rs  literal.rs  mod.rs  order_by.rs  query.rs  select_list.rs  select_query.rs  table_expression.rs  table_identifier.rs  update_query.rs
sql-rs/src/parse/ast/query/: mod.rs  select_query.rs
src/: main.rs  query.pest
test-files/: seed.sql  seed2.sql
