[package]
name = "sql-rs"
version = "0.1.0"
authors = ["Andrew Halle <ahalle@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
structopt = { version = "0.3.21", default-features = false }
ansi_term = "0.12.1"
lazy_static = "1.4.0"
thiserror = "1.0.26"
rustyline = "8.2.0"
